# TrailerApp

TrailerAppLib/klapp-trailer/: CMakeLists.txt  TrailerApp.files  TrailerApp.includes
TrailerAppLib/klapp-trailer/inc/: ITrailerLogicManager.h  ITrailerScreenManager.h  TrailerFactory.h  TrailerGlobalTypes.h  TrailerLogicManager.h  TrailerScreenManager.h  TrailerScreenManager.h.autosave
TrailerAppLib/klapp-trailer/src/: ITrailerLogicManager.cpp  ITrailerScreenManager.cpp  TrailerFactory.cpp  TrailerLogicManager.cpp  TrailerScreenManager.cpp  TrailerScreenManager.cpp.autosave
TrailerAppLib/klapp-trailer/test/unit/simulation/inc/: TrailerSimulation.h
TrailerAppLib/klapp-trailer/test/unit/simulation/src/: TrailerSimulation.cpp
